--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</div>	
 	<!-- div for testimonial-->
 	<div class="container">
-		<h4><span class="underblack">Ser</span>vices We Offer</h4>
+		<h4><span class="underblack">Ser</span>vices We Offer</h4><br>
 		<div class="card-columns">
 			<div class="tesmo">
 				<h4>Brand Strategy</h4>
@@ -47,7 +47,7 @@
 				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate.</p>
 			</div>
 		</div><br>
-		<div class="card tesmo">
+		<div class="tesmo">
 				<h4>Influencer Campaigns</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate.</p>
 			</div>
@@ -56,50 +56,60 @@
 	<br>
 	<!-- div for cards... -->
 	<div class="container">
-		<h4><span class="underblack">Our</span> Campaigns</h4>
+		<h4><span class="underblack">Our</span> Campaigns</h4><br>
 		<div class="card-deck">
 			<div class="card bg"><br>
-				<div class="card-title"><h4>A Day At Thambi Vilas</h4>
-				</div>
-				<div class="card-body"><p>Revenue increase of 3x in 2 months.</p>
+				<div class="card-body">
+					<h4>A Day A<span class="underwhite">t Tha</span>mbi Vilas</h4>
+					<p>Revenue increase of 3x in 2 months.</p>
 					<button class="buton">Video & Production</button>
-					</div>
-				<div class="card-footer"><a href="#">Learn More</a>
+				</div>
+				<div class="card-footer">
+					<a href="#">Learn More &#x2192</a>
 				</div>
 			</div>
 			<div class="card bg"><br>
-				<div class="card-title"><h4>A Day At Thambi Vilas</h4>
-				</div>
-				<div class="card-body"><p>Revenue increase of 3x in 2 months.</p>
+				<div class="card-body">
+					<h4>A Day A<span class="underwhite">t Tha</span>mbi Vilas</h4>
+					<p>Revenue increase of 3x in 2 months.</p>
 					<button class="buton">Video & Production</button>
-					</div>
-				<div class="card-footer"><a href="#">Learn More</a>
 				</div>
-			</div>	
+				<div class="card-footer">
+					<a href="#">Learn More &#x2192</a>
+				</div>	
+			</div>
 		</div><br>
 		<div class="card-deck">
 			<div class="card bg"><br>
-				<div class="card-title"><h4>A Day At Thambi Vilas</h4>
-				</div>
-				<div class="card-body"><p>Revenue increase of 3x in 2 months.</p>
+				<div class="card-body">
+					<h4>A Day A<span class="underwhite">t Tha</span>mbi Vilas</h4>
+					<p>Revenue increase of 3x in 2 months.</p>
 					<button class="buton">Video & Production</button>
-					</div>
-				<div class="card-footer"><a href="#">Learn More</a>
+				</div>
+				<div class="card-footer">
+					<a href="#">Learn More &#x2192</a>
 				</div>
 			</div>
 			<div class="card bg"><br>
-				<div class="card-title"><h4>A Day At Thambi Vilas</h4>
-				</div>
-				<div class="card-body"><p>Revenue increase of 3x in 2 months.</p>
+				<div class="card-body">
+					<h4>A Day A<span class="underwhite">t Tha</span>mbi Vilas</h4>
+					<p>Revenue increase of 3x in 2 months.</p>
 					<button class="buton">Video & Production</button>
-					</div>
-				<div class="card-footer"><a href="#">Learn More</a>
 				</div>
-			</div>	
+				<div class="card-footer">
+					<a href="#">Learn More &#x2192</a>
+				</div>	
 		</div>
 	</div>
-	</div>
+	</div><br>
 	<!--- div for image area -->
-	<div class="container"></div>
+	<div class="container lastcont">
+		<div class="row">
+			<div class="col-md-10 lastcontbody"><br>
+				<p class="card-title">Let’s get your marketing flywheel running for you! Ready for your growth?</p></div>
+			<div class="col-md-2 lastcontpic">
+			</div>
+		</div>
+	</div><br><br>
 </body>
 </html>
