--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
- <!-- link for external stylesheet--><link rel="stylesheet" type="text/css" href="style.css">
+ <!-- link for external stylesheet-->
+ <link rel="stylesheet" type="text/css" href="style.css">
  <!-- link for icons-->
  <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 	<title>SocioKet</title>
@@ -13,42 +14,47 @@
 <body>
 	<!-- div for logo and menu image -->
 	<div class="container">
-		<div class="logo">
+		<div class="sym">
 			<div class="row">
-				<div class="col-sm-6">
-					<h6>What We do</h6>
-				</div>
-				<div class="col-sm-6">
-				</div>
+				<div class="col-sm-6">hello buddy</div>
+				<div class="col-sm-6"></div>
 			</div>
 		</div>
-	</div>	<br><br><!-- div for header -->
+		</div><br><br>
+	<!-- div for header -->
 	<div class="container">
+		<div class="row">
+			<div class="col">
 			<h6 class="alignmt">Wh<span class="underblack">at We </span>Do</h6>
 			<h1 class="alignmt">Video & Production</h1>
 			<p class="alignmt">As a walk-in driven company, we focus on connecting customers and business in one
 			place, whilst ensuring they get the benefits of returning back. We use our network and
 			social data to connect and identify the best fit for your campaign needs.</p>
+			</div>
+		</div>
 	</div>	
 	<!-- div for testimonial-->
 	<div class="container">
 		<h4><span class="underblack">Ser</span>vices We Offer</h4><br>
+		<div class="row">
 		<div class="card-columns">
 			<div class="tesmo">
-				<h4>Brand Strategy</h4>
+				<h6>Brand Strategy &#x2192</h6>
 				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate.</p>
 			</div>
 			<div class="tesmo">
-				<h4 class="card-title">Campaign Development</h4>
+				<h6>Campaign Development &#x2192</h6>
 				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate.</p>
 			</div>
 			<div class="tesmo">
-				<h4 class="card-title">Video & Production</h4>
+				<h6>Video & Production &#x2192</h6>
 				<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate.</p>
 			</div>
-		</div><br>
+		</div>
+	</div><br>
+	<div class="row">
 		<div class="tesmo">
-				<h4>Influencer Campaigns</h4>
+				<h6>Influencer Campaigns &#x2192</h6>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate.</p>
 			</div>
 		</div>
@@ -110,6 +116,8 @@
 			<div class="col-md-2 lastcontpic">
 			</div>
 		</div>
-	</div><br><br>
+	</div><br>
+	<!-- footer area -->
+
 </body>
 </html>
