--- a/socio.html
+++ b/socio.html
@@ -220,7 +220,7 @@
 				<h6 class="textshade">Call our campaign executives now &#x2192</h6>
 			</div>
 				<div class="col-md-4 linear">
-					<img src="image.png"  style="height: 265px">
+					<img src="image.png">
 				</div>
 		</div>
 	</div><br>
