--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
 					<h4><span class="underblack">01 I</span>dea</h4>
 					<p>To show the operations of a major South Indian Restaurant through our visual content. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 					</p>
-				</div>
+				</div><br>
 				<div class="row">
 					<h4><span class="underblack">02 R</span>eason for the Campaign</h4>
 					<p>The client wanted to portray about the Fresh food being served to the customers, everything from Meat & Vegetables being sourced locally and at the end of the day, the 	leftover food will be discarded and not re-used the next day.
@@ -52,18 +52,18 @@
 					</p>
 				</div>
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-sm-8">
 						<div class="row" style="margin-bottom: 7px;">
-							<img src="eat.png">
+							<img src="eat.png" class="imagesize">
 						</div>
 						<div class="row">
-							<div class="col-md-4" style="margin-left: -15px;"><img src="image10.png"></div>
-							<div class="col-md-4" style="margin: 0 -29px;"><img src="image10.png"></div>
-							<div class="col-md-4"><img src="image10.png"></div>
+							<div class="col-sm-4"><img src="taj.jpg" class="imagesize" style="width: 100%;margin-bottom: 7px;"></div>
+							<div class="col-sm-4"><img src="taj.jpg" style="width: 100%;margin-bottom: 7px;"></div>
+							<div class="col-sm-4"><img src="taj.jpg" style="width: 100%;margin-bottom: 7px;"></div>
 						</div>
 					</div>
-					<div class="col-md-4" style="margin-left: -117px;">
-						<img src="hoteltall.png">
+					<div class="col-sm-4">
+						<img src="taj.jpg" style="width: 100%; height: 100%">
 					</div>
 				</div>
 				<div class="row" style="margin-right:75px;">
